# pycsv-runner

./: LICENSE  README.md
examples/: data.csv  product_analysis.py
frontend/: app.js  index.html  styles.css
runner/: .gitignore  Cargo.toml  LICENSE  README.md
runner/examples/: bubble.py  bubble.sh  fail_case.py  fail_case.sh  fib.py  fib.sh  hello.sh  list_files.py  list_files.sh  load_test.sh  sys.sh
runner/examples/agent/: README.md  main.py  pyproject.toml
runner/src/: main.rs  memory_pipe.rs  runner.rs
