[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
axum = "0.7.5"
bytes = "1.6.1"
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
